--- a/traffic_router/connector/pom.xml
+++ b/traffic_router/connector/pom.xml
@@ -92,8 +92,14 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
-			<artifactId>coyote</artifactId>
-			<version>6.0.33</version>
+			<artifactId>tomcat-coyote</artifactId>
+			<version>8.5.15</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>tomcat-catalina</artifactId>
+			<version>8.5.15</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
