Added bouncy castle provider to help convert PKCS1 keys to PKCS8.  OpenSSL only supports PKCS8 format keys and TO creates PCKS1 keys.

--- a/traffic_router/shared/pom.xml
+++ b/traffic_router/shared/pom.xml
@@ -93,6 +93,11 @@ under the License.
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.57</version>
+		</dependency>
 	</dependencies>
 
 
